Fix top alignment header error
ERM24722

[4.0.x]

--- a/resources/stylesheets/component/desktop/custommenu.header.less
+++ b/resources/stylesheets/component/desktop/custommenu.header.less
@@ -81,8 +81,8 @@ body.mediawiki.x-body {
 }
 
 /* open */
-body.mediawiki,
-body.mediawiki.x-body {
+body.mediawiki.bs-cusom-menu-active,
+body.mediawiki.x-body.bs-cusom-menu-active {
 	&:not( .bs-custom-menu-header-container-collapse ) {
 		header.main-header {
 			top: @theme-custom-menu-height;
@@ -134,4 +134,3 @@ body.mediawiki.x-body {
 		}
 	}
 }
-
